@@ -1,5 +1,5 @@
 use LWP::UserAgent;
-use Test::More tests=>1;
+use Test::More tests=>2;
 
 my $ua = LWP::UserAgent->new;
 
@@ -10,6 +10,10 @@ my $ua = LWP::UserAgent->new;
 is($ua->post('http://localhost:5000/', Content=>'{"jsonrpc":"2.0","method":"sum","params":[2,3,5],"id":"1"}')->content,
     '{"jsonrpc":"2.0","id":"1","result":10}',
     'sum test - using an inherited method');
+
+is($ua->post('http://localhost:5000/', Content=>'{"jsonrpc":"2.0","method":"ip_address","id":"1"}')->content,
+    '{"jsonrpc":"2.0","id":"1","result":"127.0.0.1"}',
+    'ip_address test - using with_plack_request');
 
 
 
